--- a/files_svgedit/css/ocsvg.css
+++ b/files_svgedit/css/ocsvg.css
@@ -1,8 +1,13 @@
 div#editorWrapper {
-	width: 100%;
+	position: relative;
+	height: 0;
+	width: 0;
 }
 div#editorContent {
-	position: absolute;
-	width: 100%;
-	height: 100%;
+	position: absoloute;
+	display: block;
+	/*top: 80px;
+	left: 160px;*/
+    width: 100%;
+    height: 100%;
 }
