--- a/files_svgedit/css/ocsvg.css
+++ b/files_svgedit/css/ocsvg.css
@@ -1,13 +1,16 @@
 div#editorWrapper {
-	position: relative;
+	position: fixed;
 	height: 0;
 	width: 0;
+    margin: 2px;
 }
 div#editorContent {
-	position: absoloute;
-	display: block;
+	position: relative;
+	/*display: block;*/
 	/*top: 80px;
 	left: 160px;*/
+    top:0px;
+    left:0px;
     width: 100%;
     height: 100%;
 }
