--- a/tattoo/css/tattoo.css
+++ b/tattoo/css/tattoo.css
@@ -1,6 +1,1 @@
-#content {
-	background-image: url(../img/tattoo-default.png);
-	background-position: bottom right;
-	background-attachment: fixed;
-	background-repeat: no-repeat;
-}
+#content { background-position: bottom right; background-attachment: fixed;	background-repeat: no-repeat; }
