--- a/mail/css/mail.css
+++ b/mail/css/mail.css
@@ -1,2 +1,5 @@
 #mail_messages>li { border-bottom:1px solid black; }
 #mail_messages>li:last { border-bottom:none; }
+
+.mail_message_summary_info { white-space:nowrap; overflow: hidden; }
+.mail_message_summary_subject { white-space:nowrap; overflow:hidden; }
