bugfix for owncloud 3.0.2

--- a/carddavmate/css/oc_app.css
+++ b/carddavmate/css/oc_app.css
@@ -5,3 +5,10 @@ div#content input {
     width: auto;
     box-shadow: none;
 }
+
+div#carddavmate {
+    display: block;
+    position: fixed;
+    top: 3.5em;
+	overflow: auto;
+}
