--- a/files_streamer/css/style.css
+++ b/files_streamer/css/style.css
@@ -10,17 +10,21 @@
 
    .nonebox{
          position:fixed;
-         top:-40%;
+         top:20%;
          left:20%;
          right:20%;
          background:#fff;
          color:#4d4d4d;
          padding:25px;
          border:5px solid #e4e4e4;
-         width:60%;
+         border-radius:6px; 
+	 -webkit-border-radius:6px; 
+	 -moz-border-radius:5px; 
+	 -khtml-border-radius:10px;
+	 width:60%;
          height: 60%;
          z-index:101;   /* а его выше фонового блока*/
-   }
+	}
    
 a.box-close{
 	float:right;
