--- a/carddavmate/css/oc_app.css
+++ b/carddavmate/css/oc_app.css
@@ -1,14 +1,2 @@
-div#content input {
-    background: none;
-    border: none;
-    border-radius: 0px;
-    width: auto;
-    box-shadow: none;
-}
-
-div#carddavmate {
-    display: block;
-    position: fixed;
-    top: 3.5em;
-	overflow: auto;
-}
+div#content input, div#content textarea { background: none; border: none; border-radius: 0px; width: auto; box-shadow: none; }
+div#carddavmate { width:auto; }
