--- a/carddavmate/css/lib/jquery-ui-1.8.20.custom.css
+++ b/carddavmate/css/lib/jquery-ui-1.8.20.custom.css
@@ -1,5 +1,5 @@
 /*
- * jQuery UI CSS Framework 1.8.19
+ * jQuery UI CSS Framework 1.8.20
  *
  * Copyright 2011, AUTHORS.txt (http://jqueryui.com/about)
  * Dual licensed under the MIT or GPL Version 2 licenses.
@@ -51,11 +51,11 @@
 .ui-icon { width: 13px; height: 13px; }
 
 /* positioning */
-.ui-icon-circle-triangle-e { background-image: url(../../img/dp_right.svg); }
-.ui-icon-circle-triangle-w { background-image: url(../../img/dp_left.svg); }
+.ui-icon-circle-triangle-e { background-image: url(%appswebroot%/apps/carddavmate/img/dp_right.svg); }
+.ui-icon-circle-triangle-w { background-image: url(%appswebroot%/apps/carddavmate/img/dp_left.svg); }
 
 /*
- * jQuery UI Autocomplete 1.8.17
+ * jQuery UI Autocomplete 1.8.20
  *
  * Copyright 2011, AUTHORS.txt (http://jqueryui.com/about)
  * Dual licensed under the MIT or GPL Version 2 licenses.
@@ -63,13 +63,13 @@
  *
  * http://docs.jquery.com/UI/Autocomplete#theming
  */
-.ui-autocomplete { position: absolute; cursor: default; }	
+.ui-autocomplete { position: absolute; cursor: default; width: 328px; max-height: 80px; overflow-y: auto; overflow-x: hidden; padding-right: 20px;}
 
 /* workarounds */
 * html .ui-autocomplete { width:1px; } /* without this, the menu expands to 100% in IE6 */
 
 /*
- * jQuery UI Menu 1.8.17
+ * jQuery UI Menu 1.8.20
  *
  * Copyright 2010, AUTHORS.txt (http://jqueryui.com/about)
  * Dual licensed under the MIT or GPL Version 2 licenses.
