--- a/files_streamer/css/style.css
+++ b/files_streamer/css/style.css
@@ -1,38 +1,33 @@
 .overlay{
-        background:transparent url('%appswebroot%/apps/files_streamer/img/overlay.png') repeat top left;
-        position:fixed; /* с помощью этого правила фиксим и растягиваем его на весь экран*/
-        top:0px;
-        bottom:0px;
-        left:0px;
-        right:0px;
-        z-index:100;   /* поднимем его выше основной разметки*/
+	position:fixed;
+	top:0px;bottom:0px;left:0px;right:0px;
+	z-index:100;
+	background:transparent url('%appswebroot%/apps/files_streamer/img/overlay.png') repeat 0 0;
        }
 
-   .nonebox{
-         position:fixed;
-         top:20%;
-         left:20%;
-         right:20%;
-         background:#fff;
-         color:#4d4d4d;
-         padding:25px;
-         border:5px solid #e4e4e4;
-         border-radius:6px; 
-	 -webkit-border-radius:6px; 
-	 -moz-border-radius:5px; 
-	 -khtml-border-radius:10px;
-	 width:60%;
-         height: 60%;
-         z-index:101;   /* а его выше фонового блока*/
-	}
-   
+#nonebox{
+	position:fixed;
+	left:50%;top:50%;
+	z-index:101;  
+}
+
+#container{
+	position:relative;
+	left:-50%;margin-top:-50%;
+	padding:10px 10px 25px;border:5px solid #e4e4e4;
+	-webkit-border-radius:6px;
+	-moz-border-radius:5px;
+	-khtml-border-radius:10px;
+	border-radius:6px;
+	color:#4d4d4d;background:#fff;
+	box-shadow: 0 0 25px #555;
+}
+
 a.box-close{
-	float:right;
-	width:26px;
-	height:26px;
-	height:26px;
-	background:url('%appswebroot%/apps/files_streamer/img/close.png') repeat top left;;
-	margin:-30px -30px 0px 0px;
+	display:block;position:absolute;
+	top:8px;right:11px;
+	width:26px;height:26px;
+	margin:-23px -23px 0px 0px;
 	cursor:pointer;
-	display:block
+	background:url('%appswebroot%/apps/files_streamer/img/close.png') no-repeat 0 0;
 }   
