--- a/files_videoviewer/css/style.css
+++ b/files_videoviewer/css/style.css
@@ -3,7 +3,7 @@
 	top:0px;bottom:0px;left:0px;right:0px;
 	z-index:100;
 	background-color:#777;
-	background-color:rgba(50,50,50, .4);
+	background-color:rgba(119,119,119, .7);
        }
 
 #videoviewer_popup{
@@ -14,14 +14,12 @@
 
 #videoviewer_container{
 	position:relative;
-	left:-50%;margin-top:-40%;
-	padding:10px 10px 25px;border:5px solid #e4e4e4;
-	-webkit-border-radius:6px;
-	-moz-border-radius:5px;
-	-khtml-border-radius:10px;
-	border-radius:6px;
-	color:#4d4d4d;background:#fff;
-	box-shadow: 0 0 25px #555;
+	left:-50%;
+	margin-top:-40%;
+	padding:10px 10px 25px;
+	color:#4d4d4d;
+	background:#fff;
+	box-shadow: 0 0 20px #111;
 }
 
 a.box-close{
